unpackaged/main/default/objects/OpportunityLineItem/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <label>GUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>