unpackaged/main/default/objects/OpportunityLineItem/fields/One_Time__c.field-meta.xml
<CustomField>
    <fullName>One_Time__c</fullName>
    <label>One-Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>